tests/invalid/missing_function_brace.ar
//! tests/invalid/missing_function_brace.ar:5:1: error: unexpected end of file

fn main() {
    const i: usize;
